<resources>
    <string name="app_name">Mesablet</string>
    <string name="easy_sublet">Easy Sublet in one click</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="skip">Skip</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="hello">Hello,</string>
    <string name="name">Name</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="publisher_name">publisher_name</string>
    <string name="message">Send Message</string>
    <string name="add_favorites">Add Favorites</string>
    <string name="logout">Logout</string>
    <string name="address">Address</string>
    <string name="enter_address">Enter Address</string>
    <string name="price">Price</string>
    <string name="enter_price">Enter Price</string>
    <string name="description">Description</string>
    <string name="localDb">localDB</string>
    <string name="user_name">UserName</string>
    <string name="add_post">Add post</string>
    <string name="messenger">messenger</string>
    <string name="posts">Posts</string>
    <string name="_0">0</string>
    <string name="likes">Likes</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="fileds_required">All fileds are required</string>
    <string name="password_error">password must be at least 6 characters</string>
    <string name="registerSuccessfully">Register Successfully</string>
    <string name="errorRegister">You cannot register with this email or password</string>
    <string name="type_a_message">Type a message</string>
    <string name="chat">Chat</string>
    <string name="new_post">New Post</string>
    <string name="enter_you_description">Enter you Description...</string>
    <string name="create">Create</string>
    <string name="dates">Dates</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End Date</string>
    <string name="next">Next</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">dark mode</string>
    <string name="portraitText">Portrait</string>
    <string name="landscapeText">Landscape</string>
    <string name="change_language">change language</string>
    <string name="language">language</string>
    <string name="not_empty">Message cannot be empty</string>
    <string name="sure_delete">Are you sure you want to delete this post?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="must_enter">You must enter address,price and description</string>
    <string name="send_message">Send Message</string>
    <string name="save">Save</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="upload_video">Upload Video</string>
    <string name="city">City</string>
    <string name="enter_city">Enter City</string>
    <string name="city_search">enter city to search</string>
    <string name="post">Post</string>
    <string name="publish_date">Publish Date</string>
    <string name="SELECT_A_DATE">SELECT A DATE</string>
    <string name="Date_is_not_valid">Date is not valid</string>
    <string name="Feed_updated">Feed updated</string>


</resources>