<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        android:contentDescription="@string/home"/>


    <item
        android:id="@+id/booking"
        android:enabled="true"
        android:icon="@drawable/ic_booking"
        android:title="@string/booking"
        android:contentDescription="@string/booking"
        />

    <item
        android:id="@+id/favorites"
        android:enabled="true"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorites"
        android:contentDescription="@string/favorites"

        />

    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        android:contentDescription="@string/profile"
        />
</menu>