<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreatePost">

    <LinearLayout
        android:id="@+id/topPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_back" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginRight="55dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_post"
                android:textSize="20sp"
                android:textColor="@color/black"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/postContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topPage"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/upload_photo"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/ic_image" />


        <LinearLayout
            android:id="@+id/LL_Address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TV_Address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/address"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/ET_Enter_Address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:hint="@string/enter_address"
                android:textColor="@color/black"
                android:maxLines="1"
                android:background="@android:color/transparent"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LL_Price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TV_Price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/price"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/ET_Enter_Price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/enter_price"
                android:textColor="@color/black"
                android:maxLines="1"
                android:background="@android:color/transparent"/>

        </LinearLayout>

        <TextView
            android:id="@+id/Tv_post_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:text="@string/description"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/ET_description_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/black"
            android:background="@android:color/transparent"
            android:hint="@string/enter_you_description"
            android:maxLines="7"/>
    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createBtn"
        android:layout_width="208dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="101dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/btn_skip"
        android:gravity="center"
        android:text="@string/create"
        android:textAllCaps="false" />


</RelativeLayout>